Add insurance information modal for scheduling flow
- Created insurance-modal.js with modal functionality
- Integrated insurance info into schedule modal
- Added insurance modal styles to styles.css
- Included insurance-modal.js script in all HTML pages
- Modal displays accepted insurance carriers (Select Health, EMI, DMBA, PEHP, Blue Cross/Blue Shield)
- Includes verification instructions and payment options
- Users can view insurance info before scheduling appointments
- Fully tested and verified - no syntax errors or console warnings

--- a/adhd.html
+++ b/adhd.html
@@ -455,5 +455,6 @@
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
     <script src="schedule-modal.js?v=20250115" defer></script>
+    <script src="insurance-modal.js" defer></script>
 </body>
 </html> 
