--- a/ketamine-therapy.html
+++ b/ketamine-therapy.html
@@ -146,7 +146,7 @@
         <picture>
             <source srcset="assets/depression.avif" type="image/avif">
             <source srcset="assets/depression.webp" type="image/webp">
-            <img src="assets/depression.jpg" alt="Ketamine therapy for treatment-resistant depression at Allen Psychiatry in Provo, Utah" class="hero-image">
+            <img src="assets/depression.jpg" alt="Educational information about ketamine therapy for treatment-resistant depression, PTSD, and anxiety at Allen Psychiatry in Provo, Utah" class="hero-image">
         </picture>
         <div class="container">
             <h1>Ketamine Therapy | PTSD, Trauma & Treatment-Resistant Depression</h1>
@@ -350,6 +350,7 @@
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
     <script src="schedule-modal.js?v=20250115" defer></script>
+    <script src="insurance-modal.js" defer></script>
 </body>
 </html>
 
