--- a/provo.html
+++ b/provo.html
@@ -95,7 +95,7 @@
         <picture>
             <source srcset="assets/Provo%20Utah.avif" type="image/avif">
             <source srcset="assets/Provo%20Utah.webp" type="image/webp">
-            <img src="assets/Provo%20Utah.jpg" alt="Provo, Utah office location" class="hero-image">
+            <img src="assets/Provo%20Utah.jpg" alt="Provo, Utah psychiatric office location for in-person mental health appointments at Allen Psychiatry" class="hero-image">
         </picture>
         <div class="container">
             <h1>Provo Offices</h1>
@@ -147,21 +147,21 @@
                     <picture>
                         <source srcset="assets/Provo%20Office%201.avif" type="image/avif">
                         <source srcset="assets/Provo%20Office%201.webp" type="image/webp">
-                        <img src="assets/Provo%20Office%201.jpg" alt="Welcoming Reception Area" class="placeholder-img">
+                        <img src="assets/Provo%20Office%201.jpg" alt="Welcoming reception area at Allen Psychiatry Provo office for psychiatric consultations" class="placeholder-img">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
                         <source srcset="assets/Provo%20Office%202.avif" type="image/avif">
                         <source srcset="assets/Provo%20Office%202.webp" type="image/webp">
-                        <img src="assets/Provo%20Office%202.jpg" alt="Comfortable Waiting Area" class="placeholder-img">
+                        <img src="assets/Provo%20Office%202.jpg" alt="Comfortable waiting area at Allen Psychiatry Provo office for mental health appointments" class="placeholder-img">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
                         <source srcset="assets/Provo%20Office%203.avif" type="image/avif">
                         <source srcset="assets/Provo%20Office%203.webp" type="image/webp">
-                        <img src="assets/Provo%20Office%203.jpg" alt="Private Consultation Room" class="placeholder-img">
+                        <img src="assets/Provo%20Office%203.jpg" alt="Private consultation room at Allen Psychiatry Provo office for confidential psychiatric evaluations" class="placeholder-img">
                     </picture>
                 </div>
             </div>
@@ -231,6 +231,19 @@
                         <li>Bring a list of current medications</li>
                     </ul>
                 </div>
+
+                <div class="insurance-section" style="margin-top: 40px; padding: 30px; background: #f8f9fa; border-radius: var(--border-radius); border-left: 4px solid var(--primary);">
+                    <h3 style="color: var(--primary); margin-top: 0;">Accepted Insurance Plans</h3>
+                    <p>Allen Psychiatry accepts the following insurance plans:</p>
+                    <ul style="list-style: none; padding-left: 0;">
+                        <li style="margin-bottom: 10px;"><i class="fa fa-check-circle" style="color: var(--primary); margin-right: 10px;"></i><strong>Select Health</strong></li>
+                        <li style="margin-bottom: 10px;"><i class="fa fa-check-circle" style="color: var(--primary); margin-right: 10px;"></i><strong>EMI</strong></li>
+                        <li style="margin-bottom: 10px;"><i class="fa fa-check-circle" style="color: var(--primary); margin-right: 10px;"></i><strong>DMBA</strong></li>
+                        <li style="margin-bottom: 10px;"><i class="fa fa-check-circle" style="color: var(--primary); margin-right: 10px;"></i><strong>PEHP</strong></li>
+                        <li style="margin-bottom: 10px;"><i class="fa fa-check-circle" style="color: var(--primary); margin-right: 10px;"></i><strong>Blue Cross/Blue Shield</strong></li>
+                    </ul>
+                    <p style="margin-top: 20px; font-size: 0.95em; color: var(--mid-gray);">Coverage varies by plan. We recommend contacting your insurance provider to verify coverage and calling our office at <a href="tel:385-504-1334" onclick="gtag('event', 'phone_call_click', {'event_category': 'Conversion', 'event_label': 'Phone Call - Insurance', 'value': 1});" style="color: var(--primary); font-weight: 600;">(385) 504-1334</a> to discuss payment options and insurance questions.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -276,6 +289,7 @@
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/#services">Services</a></li>
                         <li><a href="/provo">Provo Offices</a></li>
+                        <li><a href="/insurance">Insurance Accepted</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/account/logon" target="_blank">Patient Portal</a></li>
                         <li><a href="https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients" target="_blank" onclick="gtag('event', 'schedule_appointment_click', {'event_category': 'Conversion', 'event_label': 'Schedule Button - Footer', 'value': 1});">Schedule Appointment</a></li>
                     </ul>
@@ -318,5 +332,6 @@
     <script src="patient-portal-modal.js"></script>
     <script src="sms-modal-simple.js"></script>
     <script src="schedule-modal.js?v=20250115" defer></script>
+    <script src="insurance-modal.js" defer></script>
 </body>
 </html> 
