--- a/rural.html
+++ b/rural.html
@@ -152,7 +152,7 @@
         <picture>
             <source srcset="assets/Rural%20Sevier%20County%20Sunset.avif" type="image/avif">
             <source srcset="assets/Rural%20Sevier%20County%20Sunset.webp" type="image/webp">
-            <img src="assets/Rural%20Sevier%20County%20Sunset.jpg" alt="A sunset over a rural county, representing rural services" class="hero-image">
+            <img src="assets/Rural%20Sevier%20County%20Sunset.jpg" alt="Rural mental health services and telehealth psychiatry for farming and ranching communities in Sevier County, Utah" class="hero-image">
         </picture>
         <div class="container">
             <h1>Mental Health Services for Rural Utah</h1>
@@ -338,5 +338,6 @@
     <script src="sms-modal-simple.js"></script>
     <script src="appointment-clarification-modal.js"></script>
     <script src="schedule-modal.js?v=20250115" defer></script>
+    <script src="insurance-modal.js" defer></script>
 </body>
 </html> 
