--- a/telehealth.html
+++ b/telehealth.html
@@ -97,7 +97,7 @@
         <picture>
             <source srcset="assets/telehealth%20snowy-winter-landscape.avif" type="image/avif">
             <source srcset="assets/telehealth%20snowy-winter-landscape.webp" type="image/webp">
-            <img src="assets/telehealth snowy-winter-landscape.jpg" alt="A snowy landscape representing telehealth services" class="hero-image">
+            <img src="assets/telehealth snowy-winter-landscape.jpg" alt="Secure telehealth psychiatry services and online mental health appointments for patients throughout Utah" class="hero-image">
         </picture>
         <div class="container">
           <h1>Telepsychiatry Throughout Utah | Online Psychiatric Care</h1>
@@ -275,5 +275,6 @@
     <script src="sms-modal-simple.js"></script>
     <script src="appointment-clarification-modal.js"></script>
     <script src="schedule-modal.js?v=20250115" defer></script>
+    <script src="insurance-modal.js" defer></script>
 </body>
 </html> 
